# NdkApplication

./: README.md  settings.gradle
app/: C内存模型.md  C细则.md  build.gradle  ffmpeg.md
app/src/androidTest/java/com/example/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main-ffmpeg.cpp  music-player.cpp  native-lib.cpp  native-test.cpp
app/src/main/cpp/player/: FFMediaPlayer.cpp  FFMediaPlayer.h
app/src/main/cpp/player/decoder/: Decoder.h  DecoderBase.cpp  DecoderBase.h
app/src/main/cpp/util/: LogUtil.h
app/src/main/java/com/example/ndk/: FFJni.java  FFJniMediaPlayer.java  MainActivity.kt  MusicActivity.kt  NativeTestActivity.java
app/src/main/java/com/example/ndk/activity/: NativeMediaPlayerActivity.kt
app/src/main/java/com/example/ndk/adapter/: MainAdapter.kt  MutableListAdapter.kt
app/src/main/java/com/example/ndk/jniUtils/: Jni.java
app/src/main/java/com/example/ndk/player/: MusicPlayer.java  MusicPlayer.kt
app/src/main/java/com/example/ndk/util/: CommonUtils.java  Exensions.kt
app/src/main/java/com/example/ndk/view/: MySurfaceView.java
app/src/main/res/layout/: activity_main.xml  activity_native_media_player.xml  activity_native_test.xml  item_main_list.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opengl/: build.gradle
opengl/src/androidTest/java/com/example/opengl/: ExampleInstrumentedTest.kt
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/com/example/opengl/: OpenglActivity.kt  ShaderHelper.kt
opengl/src/main/java/com/example/opengl/renderers/: FirstRenderer.kt  HockeyRenderer.kt
opengl/src/main/res/layout/: activity_opengl.xml
opengl/src/main/res/values-night/: themes.xml
